djangoBlog part5 slugs

--- a/djangoBlog/blog/posts/templates/posts/post_detail.html
+++ b/djangoBlog/blog/posts/templates/posts/post_detail.html
@@ -20,9 +20,9 @@
 <p>User Logged In {{user}}</p>
 
 {% if post.user == user %}
-	<a class='btn btn-info mt-4' href="{% url 'posts:post_update' pk=post.pk %}">Update</a>
+	<a class='btn btn-info mt-4' href="{% url 'posts:post_update' slug=post.slug %}">Update</a>
 
-	<a class='btn btn-danger mt-4 ms-4' href="{% url 'posts:post_delete' pk=post.pk %}">Delete</a>
+	<a class='btn btn-danger mt-4 ms-4' href="{% url 'posts:post_delete' slug=post.slug %}">Delete</a>
 {% endif %}
 
 {% endblock %}
