django blog part 16 model manager

--- a/djangoBlog/blog/posts/templates/posts/post_detail.html
+++ b/djangoBlog/blog/posts/templates/posts/post_detail.html
@@ -30,7 +30,7 @@
 <h4>Comments</h4>
 
 
-{% for comment in post.comments.all %}
+{% for comment in approved_comments %}
 	<div class="card">
 		<div class="card-header">
 			<div class="row">
@@ -40,11 +40,7 @@
 					<p>{{comment.post}}</p>	
 					<p>Written By: {{comment.user}}</p>	
 				</div>
-				{% if post.user == user %}
-				<div class="col-3">
-					<span class='approvalSpan' data="{{comment.slug}}"></span>
-				</div>
-				{% endif %}
+				
 			</div>
 			
 		</div>
@@ -62,6 +58,32 @@
 
 
 {% endfor %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <script src="{% static 'js/main.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
