--- a/djangoBlog/blog/templates/base.html
+++ b/djangoBlog/blog/templates/base.html
@@ -77,7 +77,7 @@
 		</nav>
 
 
-        <div class="container mt-5">
+        <div class="container mt-5" style='margin-bottom:1000px'>
         	{% block content %}
         	{% endblock %}
         </div>
@@ -86,3 +86,21 @@
         {% endblock %}
     </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
