--- a/djangoBlog/blog/templates/base.html
+++ b/djangoBlog/blog/templates/base.html
@@ -71,8 +71,8 @@
 		          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
 		        </li> -->
 		      </ul>
-		      <form class="d-flex">
-		        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+		      <form class="d-flex" action="{% url 'posts:post_search' %}">
+		        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name='query'>
 		        <button class="btn btn-outline-success" type="submit">Search</button>
 		      </form>
 		    </div>
