--- a/djangoBlog/customBlog/posts/templates/posts/post_list.html
+++ b/djangoBlog/customBlog/posts/templates/posts/post_list.html
@@ -1,60 +1,28 @@
 {% extends 'base.html' %}
-{% load static %}
-{% block header %}
-
-  <!-- Page Header -->
-  <header class="masthead" style="background-image: url({% static 'img/post-bg.jpg' %})">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="post-heading">
-            <h1>List of my Posts</h1>
-            <h2 class="subheading">Problems look mighty small from 150 miles up</h2>
-            <span class="meta">Posted by
-              <a href="#">Start Bootstrap</a>
-              on August 24, 2019</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </header>
-
-{% endblock %}
-
-
-
-
 
 {% block content %}
-  <!-- Post Content -->
-   <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
-        {% for post in post_list %}
-        <div class="post-preview">
-          <a href="{% url 'posts:post_detail' slug=post.slug %}">
-            <h2 class="post-title">
-              <p>{{post.title}}</p>
-            </h2>
-            <h3 class="post-subtitle">
-              <p>{{post.message}}</p>
-            </h3>
-          </a>
-          <p class="post-meta">Posted by
-            <a href="#">Start Bootstrap</a>
-            on September 24, 2019</p>
-        </div>
-        <hr>
-        {% endfor %}
-        
+<h1>Post List</h1>
 
-        
-        <!-- Pager -->
-        <div class="clearfix">
-          <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
-        </div>
-      </div>
-    </div>
-  </div>
+<hr>
+<a class='btn btn-primary' href="{% url 'posts:post_create' %}">Add a Post</a>
+<hr>
+
+{% if query %}
+	<h3>Here are the results of your search for: <span class='text-success'>{{query}}</span></h3>
+{% endif %}
+
+{% for post in post_list %}
+	<div class="card mt-5">
+		<div class="card-header">
+			<p><a href="{% url 'posts:post_detail' slug=post.slug %}"> {{post.id}}. {{post.title}}</a></p>
+			<p>Author {{post.user}}</p>
+		</div>
+		<div class="card-body">
+			<p>{{post.message}}</p>
+			<p>Post Created: {{post.created}}</p>
+			<p>Last Updated: {{post.updated}}</p>
+		</div>
+	</div>
+{% endfor %}
+
 {% endblock %}
