--- a/djangoBlog/customBlog/posts/templates/posts/post_detail.html
+++ b/djangoBlog/customBlog/posts/templates/posts/post_detail.html
@@ -10,6 +10,7 @@
 	</div>
 	<div class="card-body">
 		<p>{{post.message}}</p>
+		<p>{{post.body | safe }}</p>
 		<p>Post Created: {{post.created}}</p>
 		<p>Last Updated: {{post.updated}}</p>
 	</div>
