--- a/djangoBlog/customBlog/posts/templates/posts/post_form.html
+++ b/djangoBlog/customBlog/posts/templates/posts/post_form.html
@@ -5,6 +5,7 @@
 
 <form method='POST'>
 	{% csrf_token %}
+	{{form.media}}
 	{{form.as_p}}
 	<input class='btn btn-info' type="submit" value="Create">
 </form>
