django ecom part 3 localization

--- a/djangoEcom/ecommerce/templates/base.html
+++ b/djangoEcom/ecommerce/templates/base.html
@@ -1,5 +1,7 @@
 {% load static %}
 
+{% load i18n %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -49,15 +51,15 @@
 					{% if user.is_authenticated %}
 						<a href="{% url 'account_logout' %}" class="site-btn header-btn">Logout</a>
 					{% else %}
-						<a href="{% url 'account_login' %}" class="site-btn header-btn">Login</a>
+						<a href="{% url 'account_login' %}" class="site-btn header-btn">{% trans 'Login' %}</a>
 					{% endif %}
 					<nav class="main-menu">
 						<ul>
-							<li><a href="{% url 'index' %}">Home</a></li>
-							<li><a href="{% url 'single-course' %}">Course Detail</a></li>
-							<li><a href="{% url 'courses' %}">Courses</a></li>
-							<li><a href="{% url 'blog' %}">News</a></li>
-							<li><a href="{% url 'contact' %}">Contact</a></li>
+							<li><a href="{% url 'index' %}">{% trans 'Home' %}</a></li>
+							<li><a href="{% url 'single-course' %}">{% trans 'Course Detail' %}</a></li>
+							<li><a href="{% url 'courses' %}">{% trans 'Courses' %}</a></li>
+							<li><a href="{% url 'blog' %}">{% trans 'News' %}</a></li>
+							<li><a href="{% url 'contact' %}">{% trans 'Contact' %}</a></li>
 						</ul>
 					</nav>
 				</div>
