django ecom part 6 customizing the user

--- a/djangoEcom/ecommerce/courses/templates/courses/course_list.html
+++ b/djangoEcom/ecommerce/courses/templates/courses/course_list.html
@@ -25,13 +25,13 @@
 				<div class="row">
 					<div class="col-lg-10 offset-lg-1">
 						<div class="course-note">Featured Course</div>
-						<h3>HTNL5 & CSS For Begginers</h3>
+						<h3>HTML5 & CSS For Begginers</h3>
 						<div class="course-metas">
 							<div class="course-meta">
 								<div class="course-author">
 									<div class="ca-pic set-bg" data-setbg="{% static 'img/authors/2.jpg' %}"></div>
 									<h6>Teacher</h6>
-									<p>William Parker, <span>Developer</span></p>
+									<p>{{user.first_name}} {{user.last_name}}, <span>Developer</span></p>
 								</div>
 							</div>
 							<div class="course-meta">
