--- a/djangoEcom/ecommerce/templates/contact.html
+++ b/djangoEcom/ecommerce/templates/contact.html
@@ -15,27 +15,8 @@
 	<!-- Page info end -->
 
 
-	<!-- search section -->
-	<section class="search-section ss-other-page">
-		<div class="container">
-			<div class="search-warp">
-				<div class="section-title text-white">
-					<h2><span>Search your course</span></h2>
-				</div>
-				<div class="row">
-					<div class="col-lg-10 offset-lg-1">
-						<!-- search form -->
-						<form class="course-search-form">
-							<input type="text" placeholder="Course">
-							<input type="text" class="last-m" placeholder="Category">
-							<button class="site-btn btn-dark">Search Couse</button>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- search section end -->
+	{% include "snippets/search_form.html" %}
+
 
 
 
