--- a/djangoEcom/ecommerce/templates/account/signup.html
+++ b/djangoEcom/ecommerce/templates/account/signup.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% load i18n %}
 
+{% load crispy_forms_tags %}
+
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
@@ -48,7 +50,7 @@
 
 		<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
 		  {% csrf_token %}
-		  {{ form.as_p }}
+		  {{ form | crispy }}
 		  {% if redirect_field_value %}
 		  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
 		  {% endif %}
