--- a/djangoEcom/ecommerce/templates/index.html
+++ b/djangoEcom/ecommerce/templates/index.html
@@ -3,6 +3,7 @@
 
 {% block content %}
 
+
 	<!-- Hero section -->
 	<section class="hero-section set-bg" data-setbg="{% static 'img/bg.jpg' %}">
 		<div class="container">
@@ -138,128 +139,47 @@
 		<div class="course-warp">
 			<ul class="course-filter controls">
 				<li class="control active" data-filter="all">All</li>
-				<li class="control" data-filter=".finance">Finance</li>
-				<li class="control" data-filter=".design">Design</li>
-				<li class="control" data-filter=".web">Web Development</li>
-				<li class="control" data-filter=".photo">Photography</li>
+				<li class="control" data-filter=".itd">IT Development</li>
+				<li class="control" data-filter=".wd">Web Design</li>
+				<li class="control" data-filter=".iandd">Illustration</li>
+				<li class="control" data-filter=".sm">Social Media</li>
+				<li class="control" data-filter=".ps">PhotoShop</li>
+				<li class="control" data-filter=".crypto">Crypto Currencies</li>
 			</ul>                                       
 			<div class="row course-items-area">
 				<!-- course -->
-				<div class="mix col-lg-3 col-md-4 col-sm-6 finance">
-					<div class="course-item">
-						<div class="course-thumb set-bg" data-setbg="{% static 'img/courses/1.jpg' %}">
-							<div class="price">Price: $15</div>
-						</div>
-						<div class="course-info">
-							<div class="course-text">
-								<h5>Art & Crafts</h5>
-								<p>Lorem ipsum dolor sit amet, consectetur</p>
-								<div class="students">120 Students</div>
+<!-- 
+					('itd', 'IT Development'),
+	('wd', 'Web Design'),
+	('iandd', 'Illustration and Drawing'),
+	('sm', 'Social Media'),
+	('ps', 'PhotoShop'),
+	('crypto', 'CryptoCurrencies'),
+	) -->
+				{% for course in course_list %}
+					<div class="mix col-lg-3 col-md-4 col-sm-6 {{course.category}}">
+						<div class="course-item">
+							<div class="course-thumb set-bg" data-setbg="{% static 'img/courses/1.jpg' %}">
+								<div class="price">Price ${{course.price}}</div>
 							</div>
-							<div class="course-author">
-								<div class="ca-pic set-bg" data-setbg="{% static 'img/authors/1.jpg' %}"></div>
-								<p>William Parker, <span>Developer</span></p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- course -->
-				<div class="mix col-lg-3 col-md-4 col-sm-6 design">
-					<div class="course-item">
-						<div class="course-thumb set-bg" data-setbg="{% static 'img/courses/2.jpg' %}">
-							<div class="price">Price: $15</div>
-						</div>
-						<div class="course-info">
-							<div class="course-text">
-								<h5>IT Development</h5>
-								<p>Lorem ipsum dolor sit amet, consectetur</p>
-								<div class="students">120 Students</div>
-							</div>
-							<div class="course-author">
-								<div class="ca-pic set-bg" data-setbg="{% static 'img/authors/2.jpg' %}"></div>
-								<p>William Parker, <span>Developer</span></p>
+							<div class="course-info">
+								<div class="course-text">
+									<h5>{{course.name}}</h5>
+									<p>{{course.short_description}}</p>
+									<div class="students">{{course.number_of_students}} Students</div>
+								</div>
+								<div class="course-author">
+									<div class="ca-pic set-bg" data-setbg="{% static 'img/authors/1.jpg' %}"></div>
+									<p>{{course.user.first_name}} {{course.user.last_name}} <span> {{course.get_category_name}}</span></p>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
+				{% endfor %}
+
+
 				<!-- course -->
-				<div class="mix col-lg-3 col-md-4 col-sm-6 web">
-					<div class="course-item">
-						<div class="course-thumb set-bg" data-setbg="{% static 'img/courses/3.jpg' %}">
-							<div class="price">Price: $15</div>
-						</div>
-						<div class="course-info">
-							<div class="course-text">
-								<h5>Graphic Design</h5>
-								<p>Lorem ipsum dolor sit amet, consectetur</p>
-								<div class="students">120 Students</div>
-							</div>
-							<div class="course-author">
-								<div class="ca-pic set-bg" data-setbg="{% static 'img/authors/3.jpg' %}"></div>
-								<p>William Parker, <span>Developer</span></p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- course -->
-				<div class="mix col-lg-3 col-md-4 col-sm-6 photo">
-					<div class="course-item">
-						<div class="course-thumb set-bg" data-setbg="{% static 'img/courses/4.jpg' %}">
-							<div class="price">Price: $15</div>
-						</div>
-						<div class="course-info">
-							<div class="course-text">
-								<h5>IT Development</h5>
-								<p>Lorem ipsum dolor sit amet, consectetur</p>
-								<div class="students">120 Students</div>
-							</div>
-							<div class="course-author">
-								<div class="ca-pic set-bg" data-setbg="{% static 'img/authors/4.jpg' %}"></div>
-								<p>William Parker, <span>Developer</span></p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- course -->
-				<div class="mix col-lg-3 col-md-4 col-sm-6 finance">
-					<div class="course-item">
-						<div class="course-thumb set-bg" data-setbg="{% static 'img/courses/5.jpg' %}">
-							<div class="price">Price: $15</div>
-						</div>
-						<div class="course-info">
-							<div class="course-text">
-								<h5>IT Development</h5>
-								<p>Lorem ipsum dolor sit amet, consectetur</p>
-								<div class="students">120 Students</div>
-							</div>
-							<div class="course-author">
-								<div class="ca-pic set-bg" data-setbg="{% static 'img/authors/5.jpg' %}"></div>
-								<p>William Parker, <span>Developer</span></p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- course -->
-				<div class="mix col-lg-3 col-md-4 col-sm-6 design">
-					<div class="course-item">
-						<div class="course-thumb set-bg" data-setbg="{% static 'img/courses/6.jpg' %}">
-							<div class="price">Price: $15</div>
-						</div>
-						<div class="course-info">
-							<div class="course-text">
-								<h5>Socia Media</h5>
-								<p>Lorem ipsum dolor sit amet, consectetur</p>
-								<div class="students">120 Students</div>
-							</div>
-							<div class="course-author">
-								<div class="ca-pic set-bg" data-setbg="{% static 'img/authors/6.jpg' %}"></div>
-								<p>William Parker, <span>Developer</span></p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- course -->
-				<div class="mix col-lg-3 col-md-4 col-sm-6 web">
+			<!-- 	<div class="mix col-lg-3 col-md-4 col-sm-6 web">
 					<div class="course-item">
 						<div class="course-thumb set-bg" data-setbg="{% static 'img/courses/7.jpg' %}">
 							<div class="price">Price: $15</div>
@@ -276,9 +196,9 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<!-- course -->
-				<div class="mix col-lg-3 col-md-4 col-sm-6 photo">
+				<!-- <div class="mix col-lg-3 col-md-4 col-sm-6 photo">
 					<div class="course-item">
 						<div class="course-thumb set-bg" data-setbg="{% static 'img/courses/8.jpg' %}">
 							<div class="price">Price: $15</div>
@@ -295,7 +215,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</section>
