--- a/djangoEcom/ecommerce/courses/templates/courses/course_detail.html
+++ b/djangoEcom/ecommerce/courses/templates/courses/course_detail.html
@@ -104,16 +104,22 @@
 
 			<div>
 				<h4>Lessons</h4>
+				<hr>
+				<a href="{% url 'lessons:lesson_create' course.slug %}">Add Lesson</a>
+				<hr>
 				{% for lesson in course.lesson_set.all %}
 					<div class="card my-3">
 						
 						<div class="card-header">
-							<p><span class='font-weight-bold text-primary'>{{forloop.counter}}.</span> {{lesson.name}}</p>
-							<p>{{lesson.short_description}}</p>		
+							<a href="{% url 'lessons:lesson_detail' lesson.slug %}">
+								<p><span class='font-weight-bold text-primary'>{{forloop.counter}}.</span> {{lesson.name}}</p>
+								<p>{{lesson.short_description}}</p>
+							</a>
 						</div>
 						<div class="card-body">
-							{{lesson.long_description}}
+							{{lesson.long_description | safe}}
 						</div>
+						
 					</div>
 					
 				{% endfor %}
