--- a/djangoEcom/ecommerce/carts/templates/carts/cart.html
+++ b/djangoEcom/ecommerce/carts/templates/carts/cart.html
@@ -33,7 +33,7 @@
 				<tbody>
 					{% for course in cart.courses.all %}
 						<tr>
-							<td>{{course.name}}</td>
+							<td><a href="{% url 'courses:course_detail' course.slug %}">{{course.name}}</a></td>
 							<td>{{course.price}}</td>
 							<td>{{course.short_description}}</td>
 							<td>TODO TOTAL</td>
