--- a/djangoEcom/ecommerce/courses/templates/courses/course_detail.html
+++ b/djangoEcom/ecommerce/courses/templates/courses/course_detail.html
@@ -72,7 +72,12 @@
 							<a href="{% url 'courses:course_delete' course.slug %}" class="site-btn buy-btn">Delete</a>
 						{% else %}
 							<a href="#" class="site-btn price-btn">Price: ${{course.price}}</a>
-							<a href="#" class="site-btn buy-btn">Buy This Course</a>
+
+							{% if course in cart.courses.all %}
+								<a href="{% url 'carts:cart_update' course.slug %}" class="site-btn buy-btn">Remove from Cart</a>
+							{% else %}
+								<a href="{% url 'carts:cart_update' course.slug %}" class="site-btn buy-btn">Add to Cart</a>
+							{% endif %}
 						{% endif %}
 					</div>
 				</div>
